--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
           blockQuoteColour : '#858585',
           highlightColor : '#d22778',
           sidebarSublink : '#b4b4b4',
+          selection: 'red',
           codeTypeColor : '#ffffff',
           coverBackground : 'linear-gradient(to left bottom, hsl(118, 100%, 85%) 0%,hsl(181, 100%, 85%) 100%)',
           toogleImage : 'url(https://cdn.jsdelivr.net/npm/docsify-darklight-theme@latest/icons/sun.svg)'
@@ -84,4 +85,9 @@
   <script src="//cdn.jsdelivr.net/npm/docsify-darklight-theme@latest/dist/docsify-themeable/main.min.js" type="text/javascript"></script>
 <script src="//cdn.jsdelivr.net/npm/docsify-darklight-theme@latest/dist/docsify-themeable/index.min.js" type="text/javascript"></script>
 </body>
+<style>
+  p::selection {
+    background-color: #40916c;
+  }
+</style>
 </html>
