--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Document</title>
+  <title>Home</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="Description">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
@@ -11,8 +11,6 @@
   <!-- docsify-themeable styles-->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsify-themeable@latest/dist/css/theme-simple.css" title="light">
   <link rel="stylesheet alternative" href="https://cdn.jsdelivr.net/npm/docsify-themeable@latest/dist/css/theme-simple-dark.css" title="dark">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.28.0/moment.min.js" integrity="sha512-Q1f3TS3vSt1jQ8AwP2OuenztnLU6LwxgyyYOG1jgMW/cbEMHps/3wjvnl1P3WTrF3chJUWEoxDUEjMxDV8pujg==" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.28.0/locale/es.min.js" integrity="sha512-/HmEBBS8qan4uG3ClUfdNMUOprD0g4BNcJnOBh153mBMs16U92xULl8QS9A37/vLW17epcNp0t0fDOYWjpG73Q==" crossorigin="anonymous"></script>
 </head>
 <body>
   <div id="app"></div>
@@ -21,20 +19,7 @@
       name: 'Pagina de Luis',
       repo: 'luis-mx/luis-mx.github.io',
       loadSidebar: true,
-      formatUpdated: function(time) {
-        return moment(time).calendar();
-      },
-      plugins: [
-        function(hook, vm) {
-          hook.beforeEach(function(html) {
-            return (
-              html +
-              '\n----\n' +
-              'Ultima modificación: {docsify-updated}'
-            );
-          });
-        }
-      ],
+      formatUpdated: '{MM}/{DD} {HH}:{mm}',
       copyCode: {
         buttonText : 'Copiar',
         errorText  : 'Error',
@@ -42,7 +27,7 @@
       },
       darklightTheme: {
         siteFont : "PT Sans",
-        defaultTheme : 'light',
+        defaultTheme : 'dark',
         codeFontFamily : 'Roboto Mono, Monaco, courier, monospace',
         bodyFontSize : '17px',
         dark: {
