Se cambio de posicion el boton de menu lateral

--- a/index.html
+++ b/index.html
@@ -75,5 +75,9 @@
   p::selection {
     background-color: #40916c;
   }
+  .sidebar-toggle .sidebar-toggle-button {
+    top: auto;
+    bottom: calc(35px - (var(--sidebar-toggle-height) / 2));
+  }
 </style>
 </html>
