Agregando Google Analytics

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       name: 'Pagina de Luis',
       repo: 'luis1y0/luis1y0.github.io',
       loadSidebar: true,
+      ga: 'G-KQ2BS92Q9K',
       formatUpdated: '{MM}/{DD} {HH}:{mm}',
       copyCode: {
         buttonText : 'Copiar',
@@ -70,7 +71,9 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.23.0/components/prism-c.min.js" integrity="sha512-T6Lco61aWqCKSznWkd38lf159pD0+EwZ9UCEv6ARAvaWFiy/UHtYgOmlasT8lq5Ck17ZNHzbe5eHUablTGRXxw==" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.23.0/components/prism-dart.min.js" integrity="sha512-VH4yo/1lKdyJESNfX0vU4qKPs+92bCCV47CmXda5M57qV2ADdrI8An4EHjeN5L0i0qgD6YWTe7rrwc+XmMhZsg==" crossorigin="anonymous"></script>
   <script src="//cdn.jsdelivr.net/npm/docsify-darklight-theme@latest/dist/docsify-themeable/main.min.js" type="text/javascript"></script>
-<script src="//cdn.jsdelivr.net/npm/docsify-darklight-theme@latest/dist/docsify-themeable/index.min.js" type="text/javascript"></script>
+  <script src="//cdn.jsdelivr.net/npm/docsify-darklight-theme@latest/dist/docsify-themeable/index.min.js" type="text/javascript"></script>
+  <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/ga.min.js"></script>
 </body>
 <style>
   p::selection {
