Pagina de codigos utiles y resaltado para java

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.25.0/components/prism-javascript.min.js" integrity="sha512-3oavHcAYV/4pmn+iDuax6ru7dpjKnd+21+SzCQrYdTiYDncloL7QJ3qYvsA9JU0p7ZQjB+DizGeWMm2sUrCzSQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.25.0/components/prism-php.min.js" integrity="sha512-2RfDhHj8vXXJWFGaCJTSkt//hXtdb9/Sh2c68tx/Jf+0V5a7xOHY1oIlzF9KX591HX/cB+uDQMBXeYX/JKvlrw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.25.0/components/prism-sql.min.js" integrity="sha512-OrjGiH3KgAUReMA3g1ieErj5gbS4IBRO7hAklulWwKfEKryUcepiJX68CsdotsNNgY7LzaMuYxX4dxwuVETQmw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.28.0/components/prism-java.min.js" integrity="sha512-NHWqGxdUFVIg+uUkWHA2hjETI4mE3866HGZJDdvGJbwInEkuIOnxNgmW2IiOLxHtdKU+mhkFMw/TF2/pLrsTNw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="//cdn.jsdelivr.net/npm/docsify-darklight-theme@latest/dist/docsify-themeable/main.min.js" type="text/javascript"></script>
   <script src="//cdn.jsdelivr.net/npm/docsify-darklight-theme@latest/dist/docsify-themeable/index.min.js" type="text/javascript"></script>
   <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/ga.min.js"></script>
