Notas leer peticiones en spring

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div id="app"></div>
   <script>
     window.$docsify = {
-      name: 'Pagina de Luis',
+      name: 'Notas',
       repo: 'luis1y0/luis1y0.github.io',
       loadSidebar: true,
       ga: 'G-KQ2BS92Q9K',
