Update and rename index-old.html to index.html

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <script>
     window.$docsify = {
       name: 'Notas',
-      repo: 'luis1y0/luis1y0.github.io',
+      repo: 'mfs-luisortiz/mfs-luisortiz.github.io',
       loadSidebar: true,
       ga: 'G-KQ2BS92Q9K',
       formatUpdated: '{MM}/{DD} {HH}:{mm}',
